# zeldaevent

./: Cargo.toml  LICENSE.txt  README.md
examples/: eldin_bridge.rs  faster_scrapper.rs  port_cheat.rs  roundtrip_test.rs  simple_parse.rs  write_json.rs
src/: lib.rs  raw.rs  zevfile.rs
