[package]
name = "zeldaevent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"

[dev-dependencies]
serde_json = { version = "1.0.79" }
serde = { version = "1.0.136", features = ["derive"] }
